# my-knn-numa

./: CMakeLists.txt  Makefile  main.cpp  test.sh
resources/: Dockerfile
resources/har/: X.csv
